--- a/web/css/portales-main_1.css
+++ b/web/css/portales-main_1.css
@@ -638,7 +638,7 @@ button.company-bgcolor-2:hover, a.company-bgcolor-2:hover {
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 975px) {
   .container.coop {width: 100%;}
   .container.proveedor {width: 100%;}
   .white-piece {
@@ -868,3 +868,50 @@ td.fc-last {
 }
 
 .glyphicon {font-family: 'Glyphicons Halflings' !important;}
+
+@media (max-width: 975px) {
+    .navbar-toggle {
+        display: block!important;
+    }
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+   .navbar-nav .open .dropdown-menu {
+       position: static;
+       float: none;
+       width: auto;
+       margin-top: 0;
+       background-color: transparent;
+       border: 0;
+       -webkit-box-shadow: none;
+       box-shadow: none;
+    }
+}
