Ajuste redencion premios

--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -479,7 +479,6 @@ a.circle-avatar, div.circle-avatar{
     font-weight: bold;
     border-bottom: 2px solid #1C4F6E;
 }
-
 .nombre-sub-categoria {
     color: #1C4F6E;
     padding: 4px;
@@ -487,19 +486,15 @@ a.circle-avatar, div.circle-avatar{
     margin: 0;
     font-weight: bold;
 }
-
 .categoria-item {
     border:2px solid #1C4F6E;
 }
-
 .sub-categoria-item {
     border: 3px solid #1C4F6E;
 }
-
 .item {margin-bottom:25px;}
 .item:hover .nombre-categoria {color:#fff; background-color: #1C4F6E;}
 .item:hover .categoria-item {border:4px solid #1C4F6E;}
-
 .more {
     width: 25px;
     height: 25px;
@@ -508,13 +503,11 @@ a.circle-avatar, div.circle-avatar{
     margin-top: -32px;
     position: absolute;
 }
-
 .redimir {
     width: 50%;
     margin: 10px auto;
     display: block;
 }
-
 .puntos {
     width: 60px;
     height: 60px;
@@ -523,7 +516,6 @@ a.circle-avatar, div.circle-avatar{
     margin-top: 2px;
     position: absolute;
 }
-
 .quantity{
     color: red;
     text-align: center;
@@ -533,4 +525,23 @@ a.circle-avatar, div.circle-avatar{
     line-height: 7px;
     position: absolute;
     margin-left: 14px;
+}
+.detalle-redencion {
+    padding: 4px 20px;
+    border-top: 2px solid #1C4F6E;
+    margin-top: 10px;
+}
+.nowrap {
+    white-space: nowrap;
+}
+.input-cantidad {
+    border: 1px solid #1C4F6E;
+    width: 50%;
+}
+.cantidad-puntos {
+    margin-bottom: 0px;
+}
+.cantidad-puntos span {
+    font-weight:bold;
+    color:#C71B19;
 }
