--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -536,6 +536,7 @@ a.circle-avatar, div.circle-avatar{
 .input-cantidad {
     border: 1px solid #1C4F6E;
     width: 50%;
+    text-align: right;
 }
 .cantidad-puntos {
     margin-bottom: 0px;
