--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -415,7 +415,7 @@ a.circle-avatar, div.circle-avatar{
 
 .iframe-contenido-curso {
     width: 100%;
-    
+    border: 0;
 }
 
 @media only screen and (max-width: 320px) {
@@ -596,6 +596,12 @@ a.circle-avatar, div.circle-avatar{
 }
 
 .titulo-rotor-cursos p {
+    color: white !important;
+    font-size: 1.2rem;
+    /*font-size: 2rem;*/
+}
+
+.titulo-rotor-cursos a {
     color: white !important;
     font-size: 1.2rem;
     /*font-size: 2rem;*/
