--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -703,3 +703,52 @@ a.circle-avatar, div.circle-avatar{
 .listado-cursos-todos .listado-cursos-item {
     width: 33%;
 }
+
+/*organigrama*/
+.nodo-organigrama {
+    border: 1px solid black;
+    padding: 2px;
+    width: 300px;
+}
+
+.nodo-organigrama .node-title {
+    font-weight: 600;
+    margin:0;
+}
+
+.nodo-organigrama .node-name {
+    margin: 0;
+}
+
+.nodo-organigrama img {
+    width: 60px;
+    height: 60px;
+    margin-right: 5px;
+    cursor: pointer;
+}
+
+#modal-perfil .modal-body {
+    background-color: white;
+}
+
+#modal-perfil .modal-body h4 {
+    margin: 3px 0 3px 0;
+}
+
+#modal-perfil .modal-body p {
+    margin-bottom: 0px;
+}
+
+#modal-perfil .modal-header {
+    /*background-color: #E5E9EC;*/
+    border: none;
+    text-align: center;
+}
+
+#modal-perfil img {
+    height: 160px;
+    width: 160px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
