--- a/web/libs/webarch/webarch.css
+++ b/web/libs/webarch/webarch.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);
+/*@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700);*/
 /*------------------------------------------------------------------
 Webarch v2.8
 Theme : Default
