--- a/web/css/intranet.css
+++ b/web/css/intranet.css
@@ -579,67 +579,6 @@ a.circle-avatar, div.circle-avatar{
     color:#C71B19;
 }
 
-.rotor-cursos img {
-    width: 100%;
-    height: 400px;
-}
-
-.titulo-rotor-cursos {
-    /*background-color: rgba(93, 63, 17, 0.7);*/
-    background-color: rgba(0, 0, 0, 0.7);
-    width: 40%;
-    height: auto;
-    position: absolute;
-    bottom: 50px;
-    height: 40px;
-    text-overflow: ellipsis;
-}
-
-.titulo-rotor-cursos p {
-    color: white !important;
-    font-size: 1.2rem;
-    /*font-size: 2rem;*/
-}
-
-.titulo-rotor-cursos a {
-    color: white !important;
-    font-size: 1.2rem;
-    /*font-size: 2rem;*/
-}
-
-.titulo-rotor-cursos h3 {
-    margin-left: 5px;
-    color: white !important;
-    font-size: 1.2rem;
-    line-height: 1.2rem;
-    font-weight: 600;
-}
-
-.titulo-columna-cursos {
-    color: white;
-    padding: 5px 0px 5px 5px;
-    margin: 0 !important;
-    font-weight: 600;
-}
-
-.formacion {
-    background-color: #891F4F;
-}
-
-.comunicacion {
-    background-color: #009FE3;
-}
-
-.listado-cursos-contenedor {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-.listado-cursos-columna {
-    width: 48%;
-}
-
 .titulo-curso-destacado {
     background-color: #e1dbd4;
     font-size: 1.8rem;
@@ -662,64 +601,15 @@ a.circle-avatar, div.circle-avatar{
     width: 100%;
 }
 
-.listado-cursos-item {
-    background-color: pink;
-    height: 160px;
-    display: inline-flex;
-    margin-top: 20px; 
+.titulo-miscursos {
+    background-color: #D1DADE;
+    padding: 10px;
 }
 
-.listado-cursos {
-    margin-top: 20px;
-    margin-bottom: 40px;
-}
-.listado-cursos-item img {
-    width: 50%;
+.titulo-miscursos a {
+    color: #505458;
 }
 
-.listado-cursos-item-titulo {
-    width: 50%;
-    background-color: #e1dbd4;
-}
-
-.listado-cursos-item-titulo h3 {
-    font-size: 1.6rem;
-    /*line-height: 1.6rem;*/
-    font-weight: 400;
-    margin-left: 10px;
-    margin-top: 20px;
-}
-
-.listado-cursos-item-titulo .glyphicon {
-    font-size: 1.3rem;
-}
-
-.listado-cursos-item-titulo .rating-xs {
-    font-size: 1rem;
-}
-
-.ver-mas {
-    background-color: red;
-    color: white;
-    font-size: 1.8rem;
-    font-weight: 600;
-    padding: 2px 20px 2px 20px;
-    border-radius: 60px;
-    margin-bottom: 20px;
-}
-
-.ver-mas:hover {
-    color: white;
-}
-
-.ver-mas:visited {
-    color: white;
-}
-
-.listado-cursos-todos .listado-cursos-item {
-    width: 45%;
-    margin-right: 4.5%;
-}
 
 /*organigrama*/
 .nodo-organigrama {
